flag icon, adress added

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,36 @@
 body {
   margin: 0;
-  font-family: sans-serif; }
+  font-family: 'Montserrat', sans-serif;
+  max-width: 100vw; }
+
+.loader {
+  background-image: url("../img/hero-euro.jpg");
+  background-color: white;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999; }
+
+.title h1 {
+  font-size: 10vw; }
+
+.title h2 {
+  font-size: 8vw; }
+
+.about {
+  font-size: 1.5rem;
+  margin-top: 30px;
+  margin-bottom: 30px; }
+
+.currency li {
+  width: 70px;
+  height: 70px;
+  border-radius: 35px;
+  margin: 12px;
+  border: 1px solid grey;
+  background-size: contain; }
