--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,10 +17,24 @@ body {
   z-index: 9999; }
 
 .title h1 {
-  font-size: 10vw; }
+  font-size: calc(16px + 11vw);
+  font-weight: 700;
+  color: transparent;
+  background: url("../img/coins.jpeg") repeat;
+  background-position: 40% 50%;
+  -webkit-background-clip: text;
+  position: relative;
+  text-align: center; }
 
 .title h2 {
-  font-size: 8vw; }
+  font-size: calc(16px + 9vw);
+  font-weight: 700;
+  color: transparent;
+  background: url("../img/coins.jpeg") repeat;
+  background-position: 40% 50%;
+  -webkit-background-clip: text;
+  position: relative;
+  text-align: center; }
 
 .about {
   font-size: 1.5rem;
@@ -35,6 +49,14 @@ body {
   border: 1px solid grey;
   background-size: contain; }
 
+.container {
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%; }
+
 .bg-custom {
   background-color: rgba(0, 0, 0, 0.03); }
 
@@ -48,16 +70,16 @@ body {
   animation: tracking-in-expand 1.4s cubic-bezier(0.215, 0.61, 0.355, 1) 1.8s both; }
 
 .currency li {
-  -webkit-animation: scale-in-center 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 3s both;
-  animation: scale-in-center 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 3s both; }
+  -webkit-animation: scale-in-center 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2.8s both;
+  animation: scale-in-center 1.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2.8s both; }
 
 .text-focus-in {
-  -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 4s both;
-  animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 4s both; }
+  -webkit-animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 3.5s both;
+  animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) 3.5s both; }
 
 .scale-in-center {
-  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 5s both;
-  animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 5s both; }
+  -webkit-animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 4.2s both;
+  animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 4.2s both; }
 
 /**
  * ----------------------------------------
