--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,31 +3,18 @@ body {
   font-family: 'Montserrat', sans-serif;
   max-width: 100vw; }
 
-.loader {
-  background-image: url("../img/hero-euro.jpg");
-  background-color: white;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100vw;
-  height: 100vh;
-  z-index: 9999; }
-
 .title h1 {
-  font-size: calc(16px + 11vw);
+  font-size: calc(16px + 12vw);
   font-weight: 700;
   color: transparent;
-  background: url("../img/coins.jpeg") repeat;
+  background: url("../img/silver.jpeg") repeat;
   background-position: 40% 50%;
   -webkit-background-clip: text;
   position: relative;
   text-align: center; }
 
 .title h2 {
-  font-size: calc(16px + 9vw);
+  font-size: calc(16px + 10vw);
   font-weight: 700;
   color: transparent;
   background: url("../img/coins.jpeg") repeat;
@@ -37,16 +24,16 @@ body {
   text-align: center; }
 
 .about {
-  font-size: 1.5rem;
-  margin-top: 30px;
-  margin-bottom: 30px; }
+  font-size: calc(12px + 0.8vw);
+  margin-top: 12px;
+  margin-bottom: 12px; }
 
 .currency li {
   width: 70px;
   height: 70px;
   border-radius: 35px;
   margin: 12px;
-  border: 1px solid grey;
+  border: 1px solid silver;
   background-size: contain; }
 
 .container {
@@ -59,6 +46,12 @@ body {
 
 .bg-custom {
   background-color: rgba(0, 0, 0, 0.03); }
+
+.alert {
+  display: none; }
+
+.hideme {
+  opacity: 0; }
 
 /**
  * ----------------------------------------
@@ -80,6 +73,10 @@ body {
 .scale-in-center {
   -webkit-animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 4.2s both;
   animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 4.2s both; }
+
+.slide-in-blurred-top {
+  -webkit-animation: slide-in-blurred-top 0.5s cubic-bezier(0.23, 1, 0.32, 1) both;
+  animation: slide-in-blurred-top 0.5s cubic-bezier(0.23, 1, 0.32, 1) both; }
 
 /**
  * ----------------------------------------
@@ -178,3 +175,139 @@ body {
     -webkit-transform: scale(1);
     transform: scale(1);
     opacity: 1; } }
+
+/**
+ * ----------------------------------------
+ * animation slide-in-blurred-top
+ * ----------------------------------------
+ */
+@-webkit-keyframes slide-in-blurred-top {
+  0% {
+    -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-filter: blur(40px);
+    filter: blur(40px);
+    opacity: 0; }
+  100% {
+    -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+    transform: translateY(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1; } }
+
+@keyframes slide-in-blurred-top {
+  0% {
+    -webkit-transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    -webkit-transform-origin: 50% 0%;
+    transform-origin: 50% 0%;
+    -webkit-filter: blur(40px);
+    filter: blur(40px);
+    opacity: 0; }
+  100% {
+    -webkit-transform: translateY(0) scaleY(1) scaleX(1);
+    transform: translateY(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+    filter: blur(0);
+    opacity: 1; } }
+
+/**
+ * ----------------------------------------
+ * LOADER
+ * ----------------------------------------
+ */
+.lds-roller {
+  display: inline-block;
+  position: absolute;
+  left: 47vw;
+  top: 35%;
+  width: 100vw;
+  height: 100vh;
+  background-color: white; }
+
+@media screen and (max-width: 540px) {
+  .lds-roller {
+    position: absolute;
+    left: 41vw; } }
+
+.lds-roller div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 32px 32px; }
+
+.lds-roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: grey;
+  margin: -3px 0 0 -3px; }
+
+.lds-roller div:nth-child(1) {
+  animation-delay: -0.036s; }
+
+.lds-roller div:nth-child(1):after {
+  top: 50px;
+  left: 50px; }
+
+.lds-roller div:nth-child(2) {
+  animation-delay: -0.072s; }
+
+.lds-roller div:nth-child(2):after {
+  top: 54px;
+  left: 45px; }
+
+.lds-roller div:nth-child(3) {
+  animation-delay: -0.108s; }
+
+.lds-roller div:nth-child(3):after {
+  top: 57px;
+  left: 39px; }
+
+.lds-roller div:nth-child(4) {
+  animation-delay: -0.144s; }
+
+.lds-roller div:nth-child(4):after {
+  top: 58px;
+  left: 32px; }
+
+.lds-roller div:nth-child(5) {
+  animation-delay: -0.18s; }
+
+.lds-roller div:nth-child(5):after {
+  top: 57px;
+  left: 25px; }
+
+.lds-roller div:nth-child(6) {
+  animation-delay: -0.216s; }
+
+.lds-roller div:nth-child(6):after {
+  top: 54px;
+  left: 19px; }
+
+.lds-roller div:nth-child(7) {
+  animation-delay: -0.252s; }
+
+.lds-roller div:nth-child(7):after {
+  top: 50px;
+  left: 14px; }
+
+.lds-roller div:nth-child(8) {
+  animation-delay: -0.288s; }
+
+.lds-roller div:nth-child(8):after {
+  top: 45px;
+  left: 10px; }
+
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg); }
+  100% {
+    transform: rotate(360deg); } }
